Project_Metadata/objects/Support_Ticket_Intelligence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account for the support ticket</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Ticket Intelligences</relationshipLabel>
    <relationshipName>Support_Ticket_Intelligences2</relationshipName>
    <type>Lookup</type>
</CustomField>