Project_Metadata/objects/Support_Ticket_Intelligence__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Support agent</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Ticket_Intelligences2</relationshipName>
    <type>Lookup</type>
</CustomField>