Project_Metadata/objects/Support_Ticket_Intelligence__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Ticket Intelligences</relationshipLabel>
    <relationshipName>Support_Ticket_Intelligences2</relationshipName>
    <type>Lookup</type>
</CustomField>