Project_Metadata/objects/Support_Ticket_Intelligence__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account</description>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Support Ticket Intelligences</relationshipLabel>
    <relationshipName>Support_Ticket_Intelligences</relationshipName>
    <type>Lookup</type>
</CustomField>